--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
       - CAJ转PDF: 工具/CAJ转PDF.md
       - PDF导航添加工具: 工具/PDF导航添加工具.md
       - 外文翻译: 工具/外文翻译.md
+      - todo.txt: 工具/todo.txt.md
   - 软件配置:
       - zotero: 软件配置/Zotero.md
       - SumatraPDF: 软件配置/SumatraPDF.md
