--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
       - vscode配置LaTeX: 软件配置/VSCode配置LaTeX.md
       - RSS: 软件配置/RSS.md
       - web: 软件配置/web.md
+      - WindowTabs: 软件配置/WindowTabs.md
       - mkdocs-material: 软件配置/mkdocs-material.md
 
 
