--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,11 +20,14 @@ nav:
   - 软件配置:
       - zotero: 软件配置/Zotero.md
       - SumatraPDF: 软件配置/SumatraPDF.md
+      - Music: 软件配置/Music.md
       - vscode配置LaTeX: 软件配置/VSCode配置LaTeX.md
       - RSS: 软件配置/RSS.md
       - web: 软件配置/web.md
       - WindowTabs: 软件配置/WindowTabs.md
       - mkdocs-material: 软件配置/mkdocs-material.md
+  - Android:
+      - 智慧屏: Android/智慧屏.md
 
 
 # 主题设置
