--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ nav:
   - 工具:
       - CAJ转PDF: 工具/CAJ转PDF.md
       - PDF导航添加工具: 工具/PDF导航添加工具.md
-      - 外文翻译: 工具/外文翻译.md
+      - ENG: 工具/ENG.md
       - todo.txt: 工具/todo.txt.md
       - 文件备份: 工具/文件备份.md
   - 软件配置:
